<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvvm.ui.fragments.RegistrationFragment">

    <TextView
        android:id="@+id/registrationTextView"
        android:layout_width="213dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/registration"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iconImageView"
        android:layout_width="265dp"
        android:layout_height="176dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/logotype"
        android:src="@drawable/icon_save_the_day"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationTextView" />

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="268dp"
        android:layout_height="43dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/customed_edit_text"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@android:color/darker_gray"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconImageView" />

    <Button
        android:id="@+id/registrBtn"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_marginTop="8dp"
        android:background="@color/mainColor"
        android:text="@string/ok"
        android:textColor="@android:color/white"
        android:textSize="32sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />

    <TextView
        android:id="@+id/urlTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/conditions"
        android:textAlignment="center"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>